--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,6 +97,7 @@ button {
 .background-shape {
   position: absolute;
   bottom: 0;
+  left:0;
   height: 30%;
   width: 100%;
   border-radius: 50% 50% 0 0;
